fix: spacing grid modes images

--- a/src/styles/_grid-demo.scss
+++ b/src/styles/_grid-demo.scss
@@ -201,3 +201,14 @@
   padding-right: 0.0625rem;
   padding-left: 0.0625rem;
 }
+
+//---------------------------------------
+// Grid modes section
+//---------------------------------------
+.grid-modes .bx--col-lg-2 {
+  padding-top: $spacing-04;
+}
+
+.grid-modes div[class*='Markdown-module--paragraph-row'] {
+  margin-bottom: $spacing-03;
+}
